--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "webpack-dev-server": "3.10.3"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.5.0"
+    "@reduxjs/toolkit": "^1.5.0",
+    "reselect": "^4.0.0"
   }
 }
